--- a/step-8/README.adoc
+++ b/step-8/README.adoc
@@ -50,7 +50,8 @@ To finalize the `MainVerticle` refactoring, we must make sure the deployment ope
 include::src/main/java/io/vertx/guides/wiki/MainVerticle.java[tags=rx-sequential-composition]
 ----
 <1> The `flatMap` operator applies the function to the result of `dbVerticleDeployment`. Here it schedules the deployment of the `HttpServerVerticle`.
-<2> Operations start when subscribing. On success or on error, the `MainVerticle` start future is either completed or failed.
+<2> We use the shorter lambda form here.
+<3> Operations start when subscribing. On success or on error, the `MainVerticle` start future is either completed or failed.
 
 == Partially _"Rxifying"_ `HttpServerVerticle`
 
@@ -64,10 +65,6 @@ callback-based API. Before you can use the RxJava API to execute asynchronous op
 ----
 include::src/main/java/io/vertx/guides/wiki/http/HttpServerVerticle.java[tags=rx-imports]
 ----
-<1> Our `backupHandler()` method still uses `HttpResponse` class, so it must be imported. It turns out that the RxJava
-version of `HttpResponse` provided by Vert.x can serve as a drop-in replacement in this specific case.
-The _"Rxified"_ code in `step-8` folder of the guide repository does not import this class as the
-response type is inferred by the lambda expression.
 
 === Use delegate on a _"Rxified"_ `vertx` instance
 
