--- a/README.adoc
+++ b/README.adoc
@@ -1,6 +1,6 @@
 = A gentle guide to asynchronous programming with Eclipse Vert.x for Java developers
 Julien Ponge <julien.ponge@insa-lyon.fr> ; Thomas Segismont <tsegismo@redhat.com> ; Julien Viet <jviet@redhat.com>
-v1.3.0-SNAPSHOT, TBR
+v1.3.0, June 5th 2018
 :doctype: book
 
 ifdef::env-github[]
